--- a/src/components/Homepage/ProgramsOverview/ProgramsOverview.css
+++ b/src/components/Homepage/ProgramsOverview/ProgramsOverview.css
@@ -27,9 +27,10 @@
     /* width: 50%; */
     color: transparent;
     background-clip: text;
-    font-size: 3.5rem;
-    background-image: linear-gradient(to right, white 40%, #1d4930);
+    font-size: 4rem;
+    background-image: linear-gradient(to right, white 30%, #1d4930);
     text-align: center;
+    font-weight: 800;
 }
 .programs-overview button{
     width: 20vw;
@@ -52,7 +53,7 @@
     width: 100%;
     height: 100%;
     transform: translateY(-150%);
-    background-color: #2d784e;
+    background-color: #312F44;
     transition: all 0.2s ease;
 }
 .programs-overview button:hover{
