--- a/src/components/Homepage/Activities/Activities.css
+++ b/src/components/Homepage/Activities/Activities.css
@@ -18,3 +18,7 @@
     line-height: 1.5;
     font-size: 1.05rem;
 }
+.activities-container li span{
+    /* font-size: 1.1rem; */
+    font-weight: 600;
+}
