--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -20,15 +20,17 @@
 .navbar .nav-links a{
     color: #312F44;
     text-decoration: none;
-    padding: 0.5rem 0.7rem;
-    width: 7rem;
-    height: 5rem;
-    margin-bottom: -3rem;
+    padding: 0.7rem 0.7rem;
+    /* width: 7rem;
+    height: 5rem; */
+    /* margin-bottom: -3rem; */
     text-align: center;
 }
 .navbar .nav-links a.active{
-    background-color: #312F44;
-    color: #fff;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
+   /* background-color: #312F44;
+   color: #fff;
+   border-radius: 6px; */
+   text-decoration: underline;
+   text-underline-offset: 0.4rem;
+   text-decoration-thickness: 0.1rem;
 }
