--- a/src/components/AboutUs/CompanyEthics/CompanyEthics.css
+++ b/src/components/AboutUs/CompanyEthics/CompanyEthics.css
@@ -1,5 +1,6 @@
 .company-values{
-    padding: 2rem 6rem;
+    padding: 4rem 6rem;
+    padding-top: 2rem;
     background-color: #312F44;
     color: #fff;
 }
