--- a/src/components/AboutUs/CompanyEthics/CompanyEthics.css
+++ b/src/components/AboutUs/CompanyEthics/CompanyEthics.css
@@ -1,8 +1,13 @@
 .company-values{
     padding: 4rem 6rem;
     padding-top: 2rem;
-    background-color: #312F44;
     color: #fff;
+    position: relative;
+    height: 60vh;
+    display: flex;
+    gap: 8rem;
+    align-items: center;
+
 }
 .company-values > h1{
     font-size: 2.5rem;
@@ -11,13 +16,25 @@
 .company-values .value{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     gap: 5rem;
+    /* margin-bottom: 3rem; */
+    width: 50%;
+    margin-top: 5rem;
 }
 .company-values .value img{
-    width: 35%;
+    /* width: 35%; */
     border-radius: 7px;
+    position: absolute;
+    z-index: -1000;
     /* height: 350px; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top 10% left 0 ;
+    top: 0;
+    left: 0;
+    filter: brightness(60%);
 }
 .company-values .value h2{
     margin-bottom: 1.5rem;
