--- a/src/components/AboutUs/CompanyEthics/CompanyEthics.css
+++ b/src/components/AboutUs/CompanyEthics/CompanyEthics.css
@@ -1,12 +1,12 @@
 .company-values{
-    padding: 4rem 6rem;
-    padding-top: 2rem;
+    padding: 0rem 6rem;
+    padding-top: 8.5rem;
     color: #fff;
     position: relative;
     height: 60vh;
     display: flex;
     gap: 8rem;
-    align-items: center;
+    cursor: default;
 
 }
 .company-values > h1{
@@ -16,29 +16,26 @@
 .company-values .value{
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     gap: 5rem;
-    /* margin-bottom: 3rem; */
     width: 50%;
-    margin-top: 5rem;
 }
 .company-values .value img{
-    /* width: 35%; */
     border-radius: 7px;
     position: absolute;
     z-index: -1000;
-    /* height: 350px; */
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: top 10% left 0 ;
     top: 0;
     left: 0;
-    filter: brightness(60%);
+    filter: brightness(40%);
 }
 .company-values .value h2{
     margin-bottom: 1.5rem;
     font-size: 2.2rem;
+    text-decoration: underline;
+    text-underline-offset: 0.35rem;
 }
 .company-values .value p{
     font-size: 1.1rem;
