--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,18 @@ body{
     height: 100vh;
     overflow-x: hidden;
 }
-
+::-webkit-scrollbar{
+  width: 15px;
+  height: 100%;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #2d784e;
+  cursor: pointer;
+  border: 3px solid darkgray ;
+}
+::-webkit-scrollbar-track{
+  background-color: darkgray;
+}
 /* Colors used  */
 
 /* #2d784e  */
