--- a/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
+++ b/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
@@ -1,9 +1,60 @@
-.what-we-do{
-    padding: 2rem 6rem;
-    background-color: #312F44;
-    color: white;
-    text-align: center;
+.what-we-do {
+  padding: 2rem 0rem;
+  padding-bottom: 0;
+  background-color: #312f44;
+  color: white;
+  position: relative;
+  z-index: 0;
 }
-.what-we-do > h1{
-    font-size: 2rem;
+.what-we-do *{
+  z-index: 100;
+}
+.what-we-do .jobs-txt{
+  padding: 2rem 6rem;
+}
+.what-we-do .jobs-txt.second{
+  width: 100%;
+  margin-top: -3rem;
+  background-color: #f7f7f7;
+  color: #312F44;
+  text-align: center;
+}
+.what-we-do .jobs-txt.second p{
+  font-size: 1.5rem;
+}
+.what-we-do .jobs-txt > h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+.what-we-do .jobs-txt > p{
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+.what-we-do .jobs-container {
+  display: flex;
+  gap: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.jobs-btn{
+  position: absolute;
+  top: 50%;
+  border: 0;
+  z-index: 1100;
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: transparent
+}
+.jobs-btn svg{
+  width: 100%;
+  height: 100%;
+  fill: #8b979a;
+}
+.jobs-btn.left{
+  left: 1.5%;
+}
+.jobs-btn.right{
+  right: 1.5%;
 }
