--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* gap: 18rem; */
     padding: 2rem 4rem;
     background-color: #fff;
     height: 40vh;
@@ -34,4 +33,34 @@
     fill: #312F44;
     width: 35px;
     height: 35px;
+}
+@media(max-width:950px){
+    .main-footer .social-links{
+        flex-flow: column;
+        gap: 1rem;
+    }
+    .main-footer .social-links svg{
+        width: 20px;
+        height: 20px;
+    }
+    .main-footer .logo{
+        width: 30%;
+        margin-left: -3rem;
+    }
+
+}
+@media(max-width:750px){
+    .main-footer{
+        padding: 2rem;
+        flex-wrap: wrap;
+    }
+    .main-footer .social-links{
+        flex-flow: row;
+        width: 100vw;
+        justify-content: center;
+        gap: 3rem;
+    }
+    .main-footer .logo{
+        width: 200px;
+    }
 }
