--- a/src/components/Homepage/AboutUsOverview/AboutUsOverview.css
+++ b/src/components/Homepage/AboutUsOverview/AboutUsOverview.css
@@ -32,3 +32,33 @@
     color: #2cc26d;
     cursor: pointer;
 }
+
+@media(max-width:900px){
+    .about-overview{
+        flex-flow: column-reverse;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+    }
+    .about-overview *{
+        margin: 0;
+        padding: 0;
+    }
+    .about-overview > div:first-child{
+        width: 100%;
+        margin: 0;
+    }
+    .about-overview img{
+        width: 300px;
+        height: 400px;
+    }
+}
+@media(max-width:500px){
+    .about-overview h1{
+        font-size: 2.5rem;
+    }
+    .about-overview p{
+        font-size: 0.9rem;
+        margin-bottom: 1.5rem;
+    }
+}
