--- a/src/components/AboutUs/CompanyValues/CompanyValues.css
+++ b/src/components/AboutUs/CompanyValues/CompanyValues.css
@@ -1,44 +1,86 @@
-.our-values{
-    padding: 2rem 6rem;
-    color: #312F44;
-    background-color: #fff;
+.our-values {
+  padding: 2rem 6rem;
+  color: #312f44;
+  background-color: #fff;
 }
-.our-values > h1{
-    font-size: 3rem;
+.our-values > h1 {
+  font-size: 3rem;
 }
-.our-values .values-container{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 4rem;
-    margin-top: 2rem;
-    background-color: #fff;
+.our-values .values-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4rem;
+  margin-top: 2rem;
+  background-color: #fff;
 }
-.values-container div{
-    /* border: 1.5px solid #312F44; */
-    width: 30%;
-    padding: 2rem 1rem;
-    height: 20rem;
-    border-radius: 10px;
-    transition: all 0.2s ease-in-out;
-    background-color: #f7f7f7;
-    /* text-align: center; */
+.values-container div {
+  /* border: 1.5px solid #312F44; */
+  width: 30%;
+  padding: 2rem 1rem;
+  height: 20rem;
+  border-radius: 10px;
+  transition: all 0.2s ease-in-out;
+  background-color: #f7f7f7;
+  /* text-align: center; */
 }
-.values-container div:hover{
-    background-color: #2d784e;
-    border-color: #2d784e;
-    color: #fff;
+.values-container div:hover {
+  background-color: #2d784e;
+  border-color: #2d784e;
+  color: #fff;
 }
-.values-container div h1{
-    text-align: center;
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
+.values-container div h1 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
-.values-container div h1.long{
-    margin-bottom: 0rem;
+.values-container div h1.long {
+  margin-bottom: 0rem;
 }
-.values-container div p{
-    font-size: 1.1rem;
-    line-height: 1.5;
-    cursor: default;
+.values-container div p {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  cursor: default;
+}
+
+@media (max-width: 1470px) {
+  .values-container div {
+    width: 28%;
+    height: 24rem;
+  }
+}
+@media (max-width: 1200px) {
+  .our-values {
+    padding-inline: 3rem;
+  }
+  .values-container div {
+    height: 28rem;
+  }
+}
+@media (max-width: 980px) {
+  .our-values .values-container {
+    gap: 2rem;
+    justify-content: space-between;
+  }
+  .values-container div {
+    width: 47%;
+    height: 25rem;
+  }
+}
+@media (max-width: 660px) {
+    .values-container div {
+      max-height: 25rem;
+      width: 100%;
+    }
+}
+@media (max-width: 500px) {
+  .our-values {
+    padding-inline: 1rem;
+  }
+  .values-container div h1 {
+    font-size: 1.2rem;
+  }
+  .values-container div p {
+    font-size: 0.9rem;
+  }
 }
