--- a/src/components/Programs/ProgramsList/Program.css
+++ b/src/components/Programs/ProgramsList/Program.css
@@ -8,7 +8,7 @@
     flex-flow: row-reverse;
     justify-content: space-between;
     width: 100%;
-    text-align: right;
+    /* text-align: right; */
 }
 .program>div{
     width: 35%;
