--- a/src/components/AboutUs/CompanyToPrograms/CompanyToPrograms.css
+++ b/src/components/AboutUs/CompanyToPrograms/CompanyToPrograms.css
@@ -27,3 +27,32 @@
     color: #49c47e;
     text-underline-offset: 0.3rem;
 }
+@media(max-width:1150px){
+    .company-to-programs p{
+        font-size: 1.6rem;
+    }
+    .company-to-programs li{
+        font-size: 1rem;
+    }
+    .company-to-programs img{
+        width: 45%;
+    }
+}
+@media(max-width:900px){
+    .company-to-programs {
+        padding-inline: 2rem;
+    }
+}
+@media(max-width:750px){
+    .company-to-programs li{
+        font-size: 0.9rem;
+    }
+    .company-to-programs p{
+        font-size: 1.3rem;
+    }
+}
+@media(max-width:600px){
+    .company-to-programs img{
+        display: none;
+    }
+}
