--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,8 +37,8 @@
 }
 .navbar .hamburger-btn{
     transition: all 0.2s ease;
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     fill: #312F44;
     display: none;
 }
@@ -47,6 +47,7 @@
     .navbar{
         padding-inline: 1rem;
         position: relative;
+        padding-block: 0.5rem;
     }
 }
 @media(max-width:800px){
@@ -54,6 +55,10 @@
         display: flex;
         position: relative;
         z-index: 100;
+    }
+    .navbar .logo img{
+        width: 150px;
+        height: 50px;
     }
     .navbar .nav-links{
         position: absolute;
