--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -51,6 +51,12 @@
     }
 }
 @media(max-width:800px){
+    .navbar{
+        content: "";
+        width: 100%;
+        height: 100vh;
+
+    }
     .navbar .hamburger-btn{
         display: flex;
         position: relative;
