--- a/src/components/ContactUs/ContactHeader/ContactHeader.css
+++ b/src/components/ContactUs/ContactHeader/ContactHeader.css
@@ -5,3 +5,19 @@
 .contact-header h1{
     font-size: 2.5rem;
 }
+@media(max-width:1000px){
+    .contact-header h1{
+        font-size: 2rem;
+    }
+}
+@media(max-width:850px){
+    .contact-header{
+        padding-inline: 2rem;
+        font-size: 1.6rem;
+    }
+}
+@media(max-width:550px){
+    .contact-header h1{
+        font-size: 1.3rem;
+    }
+}
