--- a/src/components/ContactUs/ContactHeader/ContactHeader.css
+++ b/src/components/ContactUs/ContactHeader/ContactHeader.css
@@ -1,6 +1,7 @@
 .contact-header{
     padding: 2rem 6rem;
     color: #312F44;
+    background-color: #f7f7f7;
 }
 .contact-header h1{
     font-size: 2.5rem;
