--- a/src/components/OpenEvent/OpenEventContent/OpenEventContent.css
+++ b/src/components/OpenEvent/OpenEventContent/OpenEventContent.css
@@ -12,3 +12,21 @@
     font-size: 1rem;
     line-height: 1.5;
 }
+@media(max-width:850px){
+    .open-event{
+        padding: 2rem;
+    }
+}
+@media(max-width:650px){
+    .open-event h2{
+        font-size: 1.1rem;
+    }
+    .open-event p{
+        font-size: 0.9rem;
+    }
+}
+@media(max-width:550px){
+    .open-event{
+        padding-inline: 1rem;
+    }
+}
