--- a/src/components/OurTeam/TeamList/TeamList.css
+++ b/src/components/OurTeam/TeamList/TeamList.css
@@ -10,7 +10,7 @@
 .team{
     width: 23%;
     background-color: #fff;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     border-radius: 7px;
 }
 .team img{
@@ -38,4 +38,36 @@
     border-radius: 6px;
     margin-top: 1rem;
     cursor: pointer;
+}
+
+@media(max-width:1400px){
+    .team{
+        width: 31%;
+    }
+}
+@media(max-width:1110px){
+    .team{
+        width: 30%;
+    }
+}
+@media(max-width:950px){
+    .team-list{
+        padding-inline: 2rem;
+    }
+}
+@media(max-width:750px){
+    .team{
+        width: 45%;
+    }
+}
+@media(max-width:590px){
+    .team-list{
+        padding-inline: 1rem;
+    }
+    .team{
+        width: 100%;
+    }
+    .team img{
+        height: 23rem;
+    }
 }
