--- a/src/components/Events/EventsHeader/EventsHeader.css
+++ b/src/components/Events/EventsHeader/EventsHeader.css
@@ -5,10 +5,18 @@
 }
 .events-header h1{
     font-size: 2.7rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 .events-header p{
+    margin-bottom: 1rem;
     font-size: 1.2rem;
+}
+.events-header hr{
+    height: 0.5rem;
+    border: none;
+    background-color: #2d784e;
+    width: 10%;
+    margin-bottom: 1rem;
 }
 @media(max-width: 750px){
     .events-header{
@@ -20,6 +28,9 @@
     .events-header p{
         font-size: 1rem;
     }
+    .events-header hr{
+        width: 15%;
+    }
 }
 @media(max-width:450px){
     .events-header{
@@ -30,5 +41,8 @@
     }
     .events-header p{
         font-size: 0.9rem;
+    }
+    .events-header hr{
+        width: 20%;
     }
 }
