--- a/src/components/Homepage/AboutUsOverview/AboutUsOverview.css
+++ b/src/components/Homepage/AboutUsOverview/AboutUsOverview.css
@@ -49,8 +49,10 @@
         margin: 0;
     }
     .about-overview img{
-        width: 300px;
-        height: 400px;
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        object-position: top 26% left 0;
     }
 }
 @media(max-width:500px){
