--- a/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
+++ b/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
@@ -1,21 +1,28 @@
 .what-we-do {
   padding: 2rem 0rem;
   padding-bottom: 0;
-  background-color: #312f44;
+  background-color: #286442;
   color: white;
   position: relative;
   z-index: 0;
 }
 .what-we-do .jobs-txt {
-  padding: 2rem 6rem;
+  padding: 0rem 6rem;
 }
 .what-we-do .jobs-txt > h1 {
   font-size: 2.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .what-we-do .jobs-txt > p {
   font-size: 1.2rem;
   line-height: 1.5;
+}
+.what-we-do .jobs-txt hr{
+  height: 0.5rem;
+  margin-bottom: 1.5rem;
+  border: 0;
+  background-color: #fff;
+  width: 10%;
 }
 .what-we-do .jobs-container {
   display: flex;
@@ -67,5 +74,8 @@
   }
   .jobs-btn{
     top: 88%;
+  }
+  .what-we-do .jobs-txt hr{
+    width: 25%;
   }
 }
