--- a/src/components/Resources/ResourcesList/ResourcesList.css
+++ b/src/components/Resources/ResourcesList/ResourcesList.css
@@ -14,12 +14,33 @@
   width: 100%;
   height: 100%;
   align-items: center;
+  overflow: hidden;
+}
+.resource .img-loader {
+  width: 80vw;
+  height: 30vh;
+  position: absolute;
+  top: -15rem;
+  z-index: 1000;
+  right: 0;
+  background-color: #fff;
+}
+.resource .img-loader .wheel {
+  width: 200px;
+  height: 200px;
+  border: 15px solid #f7f7f7;
+  border-top: 15px solid gray;
+  border-radius: 50%;
+  margin-left: 5rem;
+  margin-top: 0rem;
+  animation: loader-spin 1s linear forwards infinite;
 }
 .resource div {
   width: 60%;
 }
 .resource div:nth-child(2) {
   width: 40%;
+  position: relative;
 }
 .resource h2 {
   font-size: 1.3rem;
@@ -41,6 +62,16 @@
   width: 100%;
   height: 100%;
 }
+
+@keyframes loader-spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 950px) {
   .resources-list {
     padding-inline: 2rem;
@@ -71,7 +102,7 @@
   .resources-list {
     padding-inline: 1rem;
   }
-  .resource{
+  .resource {
     padding-inline: 1rem;
   }
 }
