--- a/src/components/Homepage/Hero/Hero.css
+++ b/src/components/Homepage/Hero/Hero.css
@@ -10,6 +10,13 @@
     height: 100%;
     z-index: -5;
     object-fit: cover;
+    filter: blur(5px);
+    opacity: 0;
+    transition: all 0.4s ease;
+}
+.hero .hero-image.visible{
+    filter: blur(0);
+    opacity: 1;
 }
 .hero .hero-txt{
     width: 100%;
@@ -22,14 +29,62 @@
     padding-left: 7rem;
     gap: 2rem;
 }
+.hero .hero-txt h3{
+    transform: translateX(-4rem);
+    /* filter: blur(15px); */
+    opacity: 0;
+    transition: all 0.5s ease;
+    transition-delay: 0.4s;
+}
+.hero .hero-txt h3.visible{
+    transform: translateX(0%);
+    filter: blur(0px);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.15s;
+}
 .hero .hero-txt h1{
     font-size: 7rem;
     letter-spacing: 0.2rem;
     margin-top: -10rem;
+    transform: translateX(-4rem);
+    /* filter: blur(15px); */
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+.hero .hero-txt h1.visible{
+    transform: translateX(0%);
+    filter: blur(0px);
+    opacity: 1;
+    transition: all 0.5s ease;
 }
 .hero .hero-txt p{
     font-size: 1.5rem;
+    transform: translateX(-4rem);
+    /* filter: blur(15px); */
+    opacity: 0;
+    transition: all 0.5s ease;
+    transition-delay: 1s;
 }
+.hero .hero-txt p.visible{
+    transform: translateX(0%);
+    filter: blur(0px);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.3s;
+}
+.hero .hero-cta-btns{
+    transform: translateY(3rem);
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+.hero .hero-cta-btns.visible{
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.45s;
+}
+
 .hero .hero-cta-btns button{
     background-color: #2d784e;
     border: 3px solid #2d784e;
