--- a/src/components/Homepage/Activities/KeyAreas.css
+++ b/src/components/Homepage/Activities/KeyAreas.css
@@ -1,47 +1,81 @@
 .key-areas{
+    padding: 2rem 6rem;
     color: #312F44;
-    padding: 2rem 4rem;
-    text-align: center;
-}
-.key-areas > h1{
-    font-size: 3rem;
 }
 .key-areas .lists-container{
+    margin-top: 1.5rem;
     display: flex;
-    justify-content: center;
-    gap: 8rem;
-    margin-top: 2.5rem;
-    text-align: left;
+    flex-wrap: wrap;
+    gap: 1.5rem;
 }
-.key-areas .lists-container li{
-    list-style: "⚖️";
-    margin-bottom: 1.1rem;
+.key-areas > h1{
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+.key-areas > hr{
+    width: 15%;
+    height: 0.5rem;
+    border: none;
+    background-color: #2d784e;
+}
+.key-areas .lists-container div{
+    width: 30%;
+    height: 12rem;
+    background-color: #f7f7f7;
+    text-align: center;
+    padding: 2rem 1rem;
+    border-radius: 6px;
+    display: flex;
+    flex-flow: column;
+    gap: 2rem;
+    align-items: center;
+}
+.key-areas .lists-container div svg{
+    width: 80px;
+    height: 80px;
+    fill: #2d784e;
+}
+.key-areas .lists-container h2{
     font-size: 1.2rem;
 }
 @media(max-width:1000px){
-    .key-areas  > h1{
-        font-size: 2rem;
-    }
-    .key-areas .lists-container li{
+    .key-areas .lists-container h2{
         font-size: 1rem;
     }
 }
-@media(max-width: 730px){
-    .key-areas > h1{
-        font-size: 1.1rem;
+@media(max-width:880px){
+    .key-areas{
+        padding-inline: 2rem;
     }
-    .key-areas .lists-container{
-        gap: 5rem;
+    .key-areas>h1{
+        font-size: 1.6rem;
     }
 }
 @media(max-width:650px){
-    .key-areas .lists-container{
-        flex-flow: column;
-        gap: 0rem;
+    .key-areas .lists-container div{
+        width: 45%;
     }
 }
-@media(max-width:500px){
+@media(max-width:450px){
     .key-areas{
-        padding-inline: 2rem;
+        padding-inline: 1rem;
+    }
+    .key-areas>h1{
+        font-size: 1.2rem;
+    }
+    .key-areas > hr{
+        width: 15%;
+    }
+    .key-areas .lists-container div{
+        height: 10rem;
+        gap: 1rem;
+        padding: 1rem;
+    }
+    .key-areas .lists-container h2{
+        font-size: 0.85rem;
+    }
+    .key-areas .lists-container div svg{
+        width: 50px;
+        height: 50px;
     }
 }
