--- a/src/components/Homepage/Activities/KeyAreas.css
+++ b/src/components/Homepage/Activities/KeyAreas.css
@@ -7,16 +7,33 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
+    transform: translateY(7rem);
+    opacity: 0;
+}
+.key-areas .lists-container.visible {
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.4s;
 }
 .key-areas > h1{
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    transform: translateX(-6rem);
+    opacity: 0;
+}
+.key-areas > h1.visible{
+    transform: translateX(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.2s;
 }
 .key-areas > hr{
     width: 15%;
     height: 0.5rem;
     border: none;
     background-color: #2d784e;
+    margin-bottom: 1.1rem;
 }
 .key-areas .lists-container div{
     width: 30%;
