--- a/src/components/OpenTeam/OpenTeamContent.css
+++ b/src/components/OpenTeam/OpenTeamContent.css
@@ -28,7 +28,7 @@
   width: 100%;
   height: 100%;
   border-radius: 12px;
-  filter: brightness(80%);
+  /* filter: brightness(80%); */
   object-fit: cover;
 }
 .open-team-content .txt-container {
