--- a/src/components/AboutUs/CompanyDescription/CompanyDesctiption.css
+++ b/src/components/AboutUs/CompanyDescription/CompanyDesctiption.css
@@ -10,6 +10,14 @@
     color: transparent;
     background-image: linear-gradient(to right, #312f44, #2d784e 15%);
     background-clip: text;
+    margin-bottom: 0.5rem;
+}
+.company-description hr{
+    width: 10%;
+    height: 0.5rem;
+    border: none;
+    background-color: #2d784e;
+    margin-bottom: 1rem;
 }
 .company-description h3{
     color: transparent;
@@ -39,6 +47,9 @@
 @media(max-width:600px){
     .company-description{
         padding-inline: 1rem;
+    }
+    .company-description hr{
+        width: 15%;
     }
     .company-description h3{
         font-size: 1.3rem;
