--- a/src/components/AboutUs/CompanyDescription/CompanyDesctiption.css
+++ b/src/components/AboutUs/CompanyDescription/CompanyDesctiption.css
@@ -2,15 +2,21 @@
     padding: 2rem 6rem;
     color: #312F44;
     background-color: #f7f7f7;
+    transform: translateY(7rem);
+    opacity: 0;
+}
+.company-description.visible{
+    transform: translateY(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.2s;
 }
 .company-description h1{
     font-size: 5rem;
     letter-spacing: 0.3rem;
-    margin-bottom: 1.8rem;
     color: transparent;
     background-image: linear-gradient(to right, #312f44, #2d784e 15%);
     background-clip: text;
-    margin-bottom: 0.5rem;
 }
 .company-description hr{
     width: 10%;
