--- a/src/components/AboutUs/CompanyEthics/CompanyEthics.css
+++ b/src/components/AboutUs/CompanyEthics/CompanyEthics.css
@@ -27,6 +27,20 @@
     gap: 5rem;
     width: 50%;
 }
+.company-values .value:first-child{
+    transform: translateX(-8rem);
+    opacity: 0;
+}
+.company-values .value:nth-child(2){
+    transform: translateX(8rem);
+    opacity: 0;
+}
+.company-values .value.visible{
+    transform: translateX(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+    transition-delay: 0.5s;
+}
 .company-values .value img{
     border-radius: 7px;
     position: absolute;
