--- a/src/components/AboutUs/CompanyValues/CompanyValues.css
+++ b/src/components/AboutUs/CompanyValues/CompanyValues.css
@@ -6,6 +6,14 @@
 .our-values > h1 {
   font-size: 3rem;
 }
+.our-values > hr{
+  background-color: #2d784e;
+  width: 10%;
+  height: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  border: none;
+}
 .our-values .values-container {
   display: flex;
   align-items: center;
@@ -68,12 +76,18 @@
   }
 }
 @media (max-width: 660px) {
+  .our-values > h1{
+    font-size: 2rem;
+  }
     .values-container div {
       height: auto;
       width: 100%;
     }
 }
 @media (max-width: 500px) {
+  .our-values > h1{
+    font-size: 1.5rem;
+  }
   .our-values {
     padding-inline: 1rem;
   }
