--- a/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
+++ b/src/components/AboutUs/CompanyWhatWeDo/CompanyWhatWeDo.css
@@ -12,10 +12,24 @@
 .what-we-do .jobs-txt > h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+  transform: translateX(-8rem);
+  opacity: 0;
+}
+.what-we-do .jobs-txt > h1.visible{
+  transition: all 0.5s ease;
+  opacity: 1;
+  transform: translateX(0);
 }
 .what-we-do .jobs-txt > p {
   font-size: 1.2rem;
   line-height: 1.5;
+  transform: translateY(8rem);
+  opacity: 0;
+}
+.what-we-do .jobs-txt > p.visible{
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.5s ease;
 }
 .what-we-do .jobs-txt hr{
   height: 0.5rem;
