--- a/src/components/Homepage/Activities/KeyAreas.css
+++ b/src/components/Homepage/Activities/KeyAreas.css
@@ -9,12 +9,12 @@
     gap: 1.5rem;
     transform: translateY(7rem);
     opacity: 0;
+    transition: all 0.5s ease;
 }
 .key-areas .lists-container.visible {
     transform: translateY(0);
     opacity: 1;
     transition: all 0.5s ease;
-    transition-delay: 0.4s;
 }
 .key-areas > h1{
     font-size: 2.5rem;
