--- a/src/components/ContactUs/ContactHeader/ContactHeader.css
+++ b/src/components/ContactUs/ContactHeader/ContactHeader.css
@@ -5,7 +5,15 @@
 }
 .contact-header h1{
     font-size: 2.5rem;
+    transform: translateX(-8rem);
+    opacity: 0;
 }
+.contact-header h1.visible{
+    transform: translateX(0);
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
 @media(max-width:1000px){
     .contact-header h1{
         font-size: 2rem;
