--- a/src/components/Events/EventsHeader/EventsHeader.css
+++ b/src/components/Events/EventsHeader/EventsHeader.css
@@ -6,6 +6,13 @@
 .events-header h1{
     font-size: 2.7rem;
     margin-bottom: 0.5rem;
+    transform: translateX(-8rem);
+    opacity: 0;
+}
+.events-header h1.visible{
+    transition: all 0.5s ease;
+    transform: translateX(0);
+    opacity: 1;
 }
 .events-header p{
     margin-bottom: 1rem;
