--- a/src/components/Resources/ResourcesHeader/ResourcesHeader.css
+++ b/src/components/Resources/ResourcesHeader/ResourcesHeader.css
@@ -11,6 +11,13 @@
 .resources-header h1{
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    transform: translateX(-8rem);
+    opacity: 0;
+}
+.resources-header h1.visible{
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.5s ease;
 }
 
 @media(max-width:650px){
