--- a/src/components/Resources/ResourcesList/ResourcesList.css
+++ b/src/components/Resources/ResourcesList/ResourcesList.css
@@ -16,6 +16,13 @@
   align-items: center;
   overflow: hidden;
   margin-bottom: 1rem;
+  transform: translateX(-25rem);
+  opacity: 0;
+}
+.resource.visible{
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 0.5s ease;
 }
 .resource .img-loader {
   width: 80vw;
