--- a/src/components/OurTeam/TeamHeader/TeamHeader.css
+++ b/src/components/OurTeam/TeamHeader/TeamHeader.css
@@ -5,6 +5,13 @@
 }
 .team-header h1{
     font-size: 2.5rem;
+    transform: translateX(-8rem);
+    opacity: 0;
+}
+.team-header h1.visible{
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.5s ease;
 }
 .team-header hr{
     width: 10%;
