--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -48,6 +48,12 @@
 .navbar .nav-links > button{
     display: none;
 }
+.mobile-nav{
+    display: none;
+}
+.mobile-nav .mobile-logo img{
+    width: 200px;
+}
 
 @media(max-width:1200px){
     .navbar{
@@ -56,8 +62,28 @@
         padding-block: 0.5rem;
     }
 }
+@media(max-width:1100px){
+    .navbar .nav-links{
+        gap: 1rem;
+    }
+}
 @media(max-width:1000px){
-    .navbar::before{
+    .navbar{
+        
+    }
+    .mobile-nav{
+        /* display: flex; */
+        justify-content: space-between;
+        align-items: center;
+        padding-inline: 4rem;
+    }
+    .mobile-nav .menu-btn svg{
+        fill: #2d784e;
+        font-size: 2rem;
+        width: 30px;
+        height: 30px;
+    }
+    /* .navbar::before{
         position: absolute;
         content: "";
         z-index: 900;
@@ -67,7 +93,7 @@
         left: 0;
         background-color: rgba(0,0,0,0.7);
         backdrop-filter: blur(10px);
-    }
+    } */
     .navbar.closed{
         z-index: 1000;
     }
@@ -89,12 +115,16 @@
         justify-content: center;
         gap: 2rem;
         right: 0;
-        transform: translateY(20.7rem);
-        z-index: 1000;
+        transform: translateY(22.7rem);
+        z-index: 0;
         width: 100vw;
         height: 90vh;
         transition: all 0.4s ease;
-        background-color: #fff;
+        background-color: #312F44;
+        color: #fff;
+    }
+    .navbar .nav-links a{
+        color: #fff;
     }
     .navbar.closed .nav-links{
         transition: all 0.4s ease;
