--- a/src/components/Homepage/Hero/Hero.css
+++ b/src/components/Homepage/Hero/Hero.css
@@ -1,8 +1,8 @@
-.hero{
+.home-hero{
     position: relative;
     height: 87vh;
 }
-.hero .hero-image{
+.home-hero .hero-image{
     position: absolute;
     top: 0;
     left: 0;
@@ -14,11 +14,11 @@
     opacity: 0;
     transition: all 0.4s ease;
 }
-.hero .hero-image.visible{
+.home-hero .hero-image.visible{
     filter: blur(0);
     opacity: 1;
 }
-.hero .hero-txt{
+.home-hero .hero-txt{
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, #312f44 5%, transparent);
@@ -29,21 +29,21 @@
     padding-left: 7rem;
     gap: 2rem;
 }
-.hero .hero-txt h3{
+.home-hero .hero-txt h3{
     transform: translateX(-4rem);
     /* filter: blur(15px); */
     opacity: 0;
     transition: all 0.5s ease;
     transition-delay: 0.4s;
 }
-.hero .hero-txt h3.visible{
+.home-hero .hero-txt h3.visible{
     transform: translateX(0%);
     filter: blur(0px);
     opacity: 1;
     transition: all 0.5s ease;
     transition-delay: 0.15s;
 }
-.hero .hero-txt h1{
+.home-hero .hero-txt h1{
     font-size: 7rem;
     letter-spacing: 0.2rem;
     margin-top: -10rem;
@@ -52,13 +52,13 @@
     opacity: 0;
     transition: all 0.5s ease;
 }
-.hero .hero-txt h1.visible{
+.home-hero .hero-txt h1.visible{
     transform: translateX(0%);
     filter: blur(0px);
     opacity: 1;
     transition: all 0.5s ease;
 }
-.hero .hero-txt p{
+.home-hero .hero-txt p{
     font-size: 1.5rem;
     transform: translateX(-4rem);
     /* filter: blur(15px); */
@@ -66,26 +66,26 @@
     transition: all 0.5s ease;
     transition-delay: 1s;
 }
-.hero .hero-txt p.visible{
+.home-hero .hero-txt p.visible{
     transform: translateX(0%);
     filter: blur(0px);
     opacity: 1;
     transition: all 0.5s ease;
     transition-delay: 0.3s;
 }
-.hero .hero-cta-btns{
+.home-hero .hero-cta-btns{
     transform: translateY(3rem);
     opacity: 0;
     transition: all 0.5s ease;
 }
-.hero .hero-cta-btns.visible{
+.home-hero .hero-cta-btns.visible{
     transform: translateY(0);
     opacity: 1;
     transition: all 0.5s ease;
     transition-delay: 0.45s;
 }
 
-.hero .hero-cta-btns button{
+.home-hero .hero-cta-btns button{
     background-color: #2d784e;
     border: 3px solid #2d784e;
     color: #fff;
@@ -97,37 +97,37 @@
     cursor: pointer;
     transition: all 0.2s ease;
 }
-.hero .hero-cta-btns button:hover{
+.home-hero .hero-cta-btns button:hover{
     background-color: #fff;
     color: #2d784e;
 }
 
 @media(max-width:800px){
-    .hero{
+    .home-hero{
         height: 70vh;
     }
-    .hero .hero-txt{
+    .home-hero .hero-txt{
         padding-left: 2rem;
     }
-    .hero .hero-txt h1{
+    .home-hero .hero-txt h1{
         font-size: 4rem;
     }
-    .hero .hero-txt p{
+    .home-hero .hero-txt p{
         font-size: 1.3rem;
     }
 }
 
 @media(max-width:450px){
-    .hero{
+    .home-hero{
         height: 60vh;
     }
-    .hero .hero-txt{
+    .home-hero .hero-txt{
         padding-left: 1rem;
     }
-    .hero .hero-txt h1{
+    .home-hero .hero-txt h1{
         font-size: 3rem;
     }
-    .hero .hero-txt p{
+    .home-hero .hero-txt p{
         font-size: 0.9rem;
     }
 }
