--- a/src/components/Programs/Hero/hero.css
+++ b/src/components/Programs/Hero/hero.css
@@ -132,10 +132,15 @@
         height: 65vh;
     }
     .hero-cover h1{
-        font-size: 2.5rem;
+        font-size: 2.35rem;
     }
     .hero-cover p{
         line-height: 1.2;
-        width: 85%;
+        width: 95%;
+        font-size: 0.9rem;
     }
+    .hero-cover .right{
+        right: 1rem;
+    }
+
 }
