--- a/src/components/Programs/Hero/hero.css
+++ b/src/components/Programs/Hero/hero.css
@@ -9,7 +9,9 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-   background-image: linear-gradient(to right, rgba(0,0,0,0.85), transparent);
+   /* background-image: linear-gradient(to right, rgba(0,0,0,0.85), 
+   transparent); */
+   background-color: rgba(0, 0, 0, 0.65);
    display: flex;
    flex-flow: column;
    gap: 1rem;
