--- a/src/components/Programs/About us/AboutUs.css
+++ b/src/components/Programs/About us/AboutUs.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-flow: column;
     gap: 0.5rem;
+    font-size: 1.3rem;
 }
 
 .about-us .about-us-detail .link p{
@@ -77,7 +78,7 @@
         font-size: 3.1rem;
     }   
     .about-us .about-us-detail .link p{
-        font-size: 0.85rem;
+        font-size: 1.2rem;
     }
     .about-us .about-us-detail{
         padding-inline: 6rem;
@@ -94,7 +95,7 @@
         font-size: 2.8rem;
     }   
     .about-us .about-us-detail .link p{
-        font-size: 0.7rem;
+        font-size: 1.1rem;
     }
     .about-us .about-us-detail{
         padding-inline: 5rem;
@@ -109,7 +110,7 @@
         font-size: 2.5rem;
     }   
     .about-us .about-us-detail .link p{
-        font-size: 0.6rem;
+        font-size: 1rem;
     }
     .about-us .about-us-detail{
         padding-inline: 4rem;
@@ -124,7 +125,7 @@
         font-size: 2.3rem;
     }   
     .about-us .about-us-detail .link p{
-        font-size: 0.5rem;
+        font-size: 0.9rem;
     }
     .about-us .about-us-detail{
         padding-inline: 3rem;
@@ -141,7 +142,7 @@
         font-size: 2rem;
     }   
     .about-us .about-us-detail .link p{
-        font-size: 0.4rem;
+        /* font-size: 0.4rem; */
     }
     .about-us .about-us-detail .link{
         gap: 0.3rem;
