--- a/src/pages/Programs.css
+++ b/src/pages/Programs.css
@@ -22,7 +22,7 @@
 }
 
 .description .heading h2{
-    width: 90%;
+    width: 100%;
 }
 
 .description .detail{
@@ -172,13 +172,12 @@
         }
         .description{
             flex-flow: column;
-            justify-content: center;
+            /* justify-content: center; */
             padding: 1.5rem 2.5rem;
             height: 35vh;
         }
         .description .heading{
             width: 100%;
-            /* align-items: flex-end; */
             padding: 0;
             line-height: 1.5rem;
         }
@@ -232,6 +231,7 @@
         }
         .description .heading{
             margin-top: 1rem;
+            width: 100%;
         }
         
        }
