--- a/src/components/Programs/About us/AboutUs.css
+++ b/src/components/Programs/About us/AboutUs.css
@@ -1,10 +1,3 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .about-us{
     position: relative;
     width: 100%;
@@ -41,6 +34,8 @@
 .about-us .about-us-detail .link p{
     color: #47bd7a;
     display: inline;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
 .about-us .about-us-detail .link p:hover{
     text-decoration: underline;
