--- a/src/components/Programs/Activities/activities.css
+++ b/src/components/Programs/Activities/activities.css
@@ -91,6 +91,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .activity .see-less .button button{
@@ -101,6 +102,10 @@
     color: #2d784e;
     background-color: transparent;
     border-radius: 15px;
+    cursor: pointer;
+}
+.activity .see-less{
+    animation: fadeIn 0.5s linear forwards;
 }
 .activity .see-more{
     height: 100%;
@@ -109,6 +114,7 @@
     font-size: 0.9rem;
     background-color: #2d784e;
     color: white;
+    animation: fadeIn 0.5s linear forwards;
 }
 .activity .see-more .detail{
     width: 100%;
@@ -136,8 +142,17 @@
     color: white;
     background-color: transparent;
     border-radius: 15px;
+    cursor: pointer;
 }
 
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
 
 @media (max-width:1500px) {
     .activity{
