--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body{
 ::-webkit-scrollbar{
   width: 15px;
   height: 100%;
+  display: none;
 }
 ::-webkit-scrollbar-thumb{
   background-color: #2d784e;
