--- a/src/components/OurTeam/TeamList/TeamList.css
+++ b/src/components/OurTeam/TeamList/TeamList.css
@@ -27,6 +27,9 @@
     object-fit: cover;
     margin-bottom: 1rem;
 }
+.team.dansita img{
+    /* object-position: left 10px top 45%; */
+}
 .team h2{
     font-size: 1.3rem;
     margin-bottom: 1rem;
