refined contact page

--- a/src/components/NewContactUs/ContactOptions/ContactOptions.css
+++ b/src/components/NewContactUs/ContactOptions/ContactOptions.css
@@ -12,3 +12,9 @@
     border: none;
     background-color: #2d784e;
 }
+.contact-container{
+    display: flex;
+}
+.contact-container > div{
+    width: 50%;
+}
