--- a/src/components/NewContactUs/ContactsList/ContactsList.css
+++ b/src/components/NewContactUs/ContactsList/ContactsList.css
@@ -1,10 +1,15 @@
 .contacts-list{
     margin-top: 3rem;
     text-align: center;
+    display: flex;
+    gap: 2rem;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 .contacts-list svg{
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     margin-top: 1.5rem;
     fill: #312F44;
 }
