--- a/src/components/NewContactUs/SendMessage/SendMessage.css
+++ b/src/components/NewContactUs/SendMessage/SendMessage.css
@@ -56,10 +56,80 @@
     width: 6rem;
     margin: 0 auto;
 }
+.send-message button:disabled{
+    opacity: 0.85;
+    cursor: not-allowed;
+}
 .send-message hr{
     width: 10%;
     height: 0.5rem;
     background-color: #fff;
     border: none;
     margin-bottom: 4.5rem;
+}
+
+.success-msg{
+    border: 1px solid #005107;
+    width: 35%;
+    position: fixed;
+    z-index: 2000;
+    top: 0.3rem;
+    left: 35vw;
+    text-align: center;
+    color: #005107;
+    background-color: #c2ffe3;
+    padding: 0.3rem;
+    border-radius: 8px;
+    font-size: 1rem;
+    animation: successMsg 0.3s ease-in-out forwards;
+}
+@keyframes successMsg{
+    from{
+        transform: translateY(-5rem);
+        /* top: -5rem; */
+    }
+    to{
+        transform: translateY(0);
+        /* top: 0.3rem; */
+    }
+}
+@media(max-width:1000px){
+    .send-message{
+        padding-inline: 2rem;
+    }
+    .send-message h1{
+        font-size: 2rem;
+    }
+}
+@media(max-width:650px){
+    .send-message form{
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .send-message form div{
+        width: 100%;
+        align-items: center;
+        margin-top: 1rem;
+    }
+    .send-message form div textarea{
+        width: 75%;
+    }
+    .send-message h1{
+        font-size: 1.4rem;
+    }
+    .send-message hr{
+        margin-bottom: 1rem;
+    }
+}
+@media(max-width:500px){
+    .send-message{
+        padding-inline: 1rem;
+    }
+    .send-message form div textarea{
+        width: 100%;
+    }
+    .send-message form div label{
+        font-size: 1.1rem;
+    }
 }
