--- a/src/components/NewContactUs/ContactsList/ContactsList.css
+++ b/src/components/NewContactUs/ContactsList/ContactsList.css
@@ -2,14 +2,23 @@
     margin-top: 3rem;
     text-align: center;
     display: flex;
-    gap: 2rem;
+    gap: 1.5rem;
     flex-flow: column;
     justify-content: center;
     align-items: center;
 }
+.contacts-list .option{
+    transform: translateY(5rem);
+    opacity: 0;
+}
+.contacts-list.visible .option{
+    transform: translateY(0);
+    transition: all 0.5s ease;
+    opacity: 1;
+}
 .contacts-list svg{
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     margin-top: 1.5rem;
     fill: #312F44;
 }
